force-app/main/default/objects/Fields_Master__c/Fields_Master__c.object-meta.xml
<CustomObject>
    <label>Fields Master</label>
    <nameField>
        <displayFormat>FMN-{0000}</displayFormat>
        <label>Field Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>