force-app/main/default/objects/Fields_Master__c/fields/Field_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Name__c</fullName>
    <label>Field Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>