force-app/main/default/objects/Fields_Master__c/fields/Object_Master__c.field-meta.xml
<CustomField>
    <fullName>Object_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Master</label>
    <referenceTo>Object_Master__c</referenceTo>
    <relationshipLabel>Fields Master</relationshipLabel>
    <relationshipName>Fields_Master</relationshipName>
    <type>Lookup</type>
</CustomField>