force-app/main/default/objects/Fields_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Field_Label_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Master__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>